use spotless eclipse formatting